--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
    
-     "start" : "SET DEBUG=myexpressapp:* & node ./bin/www"
+     "start" : "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
